<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="skip">Skip </string>
    <string name="currentSong"></string>
    <string name="currentArtist"/>
    <string name="currentGenre"/>
    <string name="prev">Prev</string>
    <string name="listButton">List</string>
    <string name="action_search">action_search</string>
    <string name="search_hint">Search tracks</string>
    <string name="default_cover_art">Default album cover art</string>
    <string name="zero_time">00:00</string>

</resources>
