<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/now_playing_fragment"
    android:layout_width="match_parent"
    android:layout_height="128.0dip"
    android:background="#ffffff"
    android:windowSoftInputMode="adjustPan" >

    <ImageButton
        android:id="@+id/widget_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/widget_prev"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_action_play" />

    <ImageButton
        android:id="@+id/widget_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/widget_play"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="49dp"
        android:background="@null"
        android:contentDescription="@string/skip"
        android:src="@drawable/ic_action_next" />

    <TextView
        android:id="@+id/widget_current_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/widget_prev"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/widget_skip"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/currentSong"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/widget_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="48dp"
        android:background="@null"
        android:contentDescription="@string/prev"
        android:src="@drawable/ic_action_previous" />

</RelativeLayout>